0023097: MFC Samples do not compile after redesigning the TKOpenGl driver Replaced the obsolete 'TriangleSet' rendering primitive with 'Graphic3d_ArrayOfTriangles'